Remove another create method